<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#40585C"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/math_operation"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:layout_marginTop="50dp"
        android:ellipsize="start"
        android:gravity="end"
        android:textColor="@color/black"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/result_text"
        android:layout_width="match_parent"
        android:layout_height="130sp"
        android:ellipsize="end"
        android:gravity="end"
        android:textColor="@color/black"
        android:textSize="50sp" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:columnCount="4"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_all_clear"
            style="@style/ActionButton"
            android:text="@string/All_Clear" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_bracket_left"
            style="@style/ActionButton"
            android:text="@string/Left_Bracket" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_bracket_right"
            style="@style/ActionButton"
            android:text="@string/Right_Bracket" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/ActionButton"
            android:id="@+id/btn_devision"
            android:text="@string/devision" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_one"
            style="@style/numberButton"
            android:text="@string/_1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_two"
            style="@style/numberButton"
            android:text="@string/_2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_three"
            style="@style/numberButton"
            android:text="@string/_3" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_multiply"
            style="@style/ActionButton"
            android:text="@string/miltiplication" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_for"
            style="@style/numberButton"
            android:text="@string/_4" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_five"
            style="@style/numberButton"
            android:text="@string/_5" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_six"
            style="@style/numberButton"
            android:text="@string/_6" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_plus"
            style="@style/ActionButton"
            android:text="@string/plus" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_seven"
            style="@style/numberButton"
            android:text="@string/_7" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_eight"
            style="@style/numberButton"
            android:text="@string/_8" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_nine"
            style="@style/numberButton"
            android:text="@string/_9" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_minus"
            style="@style/ActionButton"
            android:text="@string/minus" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_dot"
            style="@style/numberButton"
            android:text="@string/dot" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_null"
            style="@style/numberButton"
            android:text="@string/_0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_delete"
            style="@style/numberButton"
            android:text="@string/delete" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_result"
            style="@style/ActionButton"
            android:text="@string/result" />


    </GridLayout>
</LinearLayout>